Added the responsive css.

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,7 +7,8 @@
         {% block title %}{% endblock %}
       {% endblock %}
     </title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-responsive.css">
     <style type="text/css">
       textarea {
         min-height: 300px;
