--- a/blog/templates/posts/show.html
+++ b/blog/templates/posts/show.html
@@ -6,6 +6,7 @@
 {% block navigation %}
   {% if g.user %}
     <li><a href="{{ url_for('posts.edit', id=post.id) }}">Edit post</a></li>
+    <li><a href="{{ url_for('posts.delete', id=post.id) }}">Delete post</a></li>
   {% endif %}
 {% endblock %}
 
