--- a/blog/templates/posts/edit.html
+++ b/blog/templates/posts/edit.html
@@ -47,10 +47,10 @@
       </div>
 
       <div class="form-actions">
-        <button class="btn btn-primary" type="submit" name="task" value="save">
+        <button class="btn btn-primary" type="submit" name="action" value="save">
           Save
         </button>
-        <button class="btn" type="submit" name="task" value="preview">
+        <button class="btn" type="submit" name="action" value="preview">
           Preview
         </button>
       </div>
