--- a/blog/templates/posts/preview.html
+++ b/blog/templates/posts/preview.html
@@ -16,6 +16,14 @@
       {% if shorten %}
         <a href="{{ url_for('posts.show', id=post.id) }}">Read more...</a>
       {% endif %}
+
+      {% if post.tags %}
+        <strong>Tags:</strong>
+        {% for tag in post.tags %}
+          <a href="{{ url_for('tags.show', id=tag.id) }}">{{ tag.name }}</a>
+          {%- if not loop.last %},{% endif %}
+        {% endfor %}
+      {% endif %}
     </article>
   {% endwith %}
 {% endmacro %}
