--- a/blog/templates/tags/edit.html
+++ b/blog/templates/tags/edit.html
@@ -32,6 +32,10 @@
         <label class="control-label" for="name">Name:</label>
         <div class="controls">
           <input type="text" class="span10" name="name" value="{{ tag_name }}">
+          <span class="help-inline">
+            A tag name can contain lowercase alphanumeric characters,
+            underscores, and dashes.
+          </span>
         </div>
       </div>
 
