--- a/blog/templates/tags/list.html
+++ b/blog/templates/tags/list.html
@@ -6,6 +6,7 @@
 
 {% block content %}
   {% if tags %}
+    <h2>Tags:</h2>
     <ul>
       {% for tag in tags %}
         <li>
@@ -15,6 +16,6 @@
       {% endfor %}
     </ul>
   {% else %}
-    No tags!
+    <h2>No tags!</h2>
   {% endif %}
 {% endblock %}
