--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -30,6 +30,7 @@
             <h1><a class="brand" href="{{ url_for('index') }}">Blog</a></h1>
             <ul class="nav">
               <li><a href="{{ url_for('posts.list') }}">Posts</a></li>
+              <li><a href="{{ url_for('tags.list') }}">Tags</a></li>
               {% if g.user %}
                 <li><a href="{{ url_for('posts.create') }}">Create Post</a></li>
                 <li><a href="{{ url_for('tags.create') }}">Create Tag</a></li>
