--- a/blog/templates/posts/preview.html
+++ b/blog/templates/posts/preview.html
@@ -1,4 +1,4 @@
-{% macro preview(post, paragraphs=None) %}
+{% macro preview(post, paragraphs=None, tags=None) %}
   {% with %}
     {% set content = post.content.replace('\r', '') %}
     {% set ps = '\n\n'.join(content.split('\n\n')[:paragraphs]) %}
@@ -17,12 +17,16 @@
         <a href="{{ url_for('posts.show', id=post.id) }}">Read more...</a>
       {% endif %}
 
-      {% if post.tags %}
+      {% if post.tags or tags %}
         <strong>Tags:</strong>
-        {% for tag in post.tags %}
-          <a href="{{ url_for('tags.show', id=tag.id) }}">{{ tag.name }}</a>
-          {%- if not loop.last %},{% endif %}
-        {% endfor %}
+        {% if tags %}
+          {{ tags.replace(' ', ', ') }}
+        {% else %}
+          {% for tag in post.tags %}
+            <a href="{{ url_for('tags.show', id=tag.id) }}">{{ tag.name }}</a>
+            {%- if not loop.last %},{% endif %}
+          {% endfor %}
+        {% endif %}
       {% endif %}
     </article>
   {% endwith %}
