Added comments. No dynamicness yet.

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -19,6 +19,14 @@
         text-align: justify;
         margin-top: 50px;
       }
+
+      .comment-controls {
+        float: right;
+      }
+
+      .anonymous {
+        color: gray;
+      }
     </style>
   </head>
 
