--- a/blog/templates/comments/show-macro.html
+++ b/blog/templates/comments/show-macro.html
@@ -1,24 +1,31 @@
 {% macro show_comment(comment, user=None) %}
-  <article class="well">
-    {% if user %}
-      <div class="comment-controls">
-        <a href="{{ url_for('comments.edit', id=comment.id) }}" class="icon-edit edit"></a>
-        <a href="{{ url_for('comments.delete', id=comment.id) }}" class="icon-remove delete"></a>
+  <div class="row">
+    <article class="well span12 comment">
+      <div class="row">
+        <div class="comment-container span11">
+          <h4>
+            {% if comment.user %}
+              <span class="user">{{ comment.user.name }}</span>
+            {% else %}
+              <span class="anonymous">{{ comment.username }}</span>
+            {% endif %}
+            said
+            <time datetime="{{ comment.creation_time.isoformat() }}" pubdate>
+              {{- comment.creation_time|timesince -}}
+            </time>:
+          </h4>
+          <div class="content">
+            {{ comment.content }}
+          </div>
+        </div>
+
+        {% if user %}
+          <div class="comment-controls span1">
+            <a href="{{ url_for('comments.edit', id=comment.id) }}" class="icon-edit edit"></a>
+            <a href="{{ url_for('comments.delete', id=comment.id) }}" class="icon-remove delete"></a>
+          </div>
+        {% endif %}
       </div>
-    {% endif %}
-    <h4>
-      {% if comment.user %}
-        <span class="user">{{ comment.user.name }}</span>
-      {% else %}
-        <span class="anonymous">{{ comment.username }}</span>
-      {% endif %}
-      said
-      <time datetime="{{ comment.creation_time.isoformat() }}" pubdate>
-        {{- comment.creation_time|timesince -}}
-      </time>:
-    </h4>
-    <div class="content">
-      {{ comment.content }}
-    </div>
-  </article>
+    </article>
+  </div>
 {% endmacro %}
