--- a/blog/templates/posts/show.html
+++ b/blog/templates/posts/show.html
@@ -22,5 +22,7 @@
     {% endfor %}
   {% endif %}
 
-  {{ edit_comment(post=post, edit=False, user=g.user, token=session['token']) }}
+  <div id="add-comment">
+    {{edit_comment(post=post, edit=False, user=g.user, token=session['token'])}}
+  </div>
 {% endblock %}
